--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 .top{
-    width: 100vw;
     background-color: #242F40;
+    display: flex;
 }
 
 .background{
     background-color: #363636;
+    display: flex;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
